// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AtIndexes Snap render AtIndexes -- props animation 1`] = `
<div
  class="at-indexes"
>
  <div
    class="at-indexes__menu"
  >
    <div
      class="at-indexes__menu-item"
    >
      Top
    </div>
  </div>
  <div
    class="at-indexes__body"
    id="indexes-list-AOTU2018"
  >
    <div
      class="at-indexes__content"
      id="at-indexes__top"
    />
  </div>
</div>
`;

exports[`AtIndexes Snap render AtIndexes -- props children 1`] = `
<div
  class="at-indexes"
>
  <div
    class="at-indexes__menu"
  >
    <div
      class="at-indexes__menu-item"
    >
      Top
    </div>
  </div>
  <div
    class="at-indexes__body"
    id="indexes-list-AOTU2018"
  >
    <div
      class="at-indexes__content"
      id="at-indexes__top"
    >
      children
    </div>
  </div>
</div>
`;

exports[`AtIndexes Snap render AtIndexes -- props className 1`] = `
<div
  class="at-indexes test"
>
  <div
    class="at-indexes__menu"
  >
    <div
      class="at-indexes__menu-item"
    >
      Top
    </div>
  </div>
  <div
    class="at-indexes__body"
    id="indexes-list-AOTU2018"
  >
    <div
      class="at-indexes__content"
      id="at-indexes__top"
    />
  </div>
</div>
`;

exports[`AtIndexes Snap render AtIndexes -- props customStyle 1`] = `
<div
  class="at-indexes"
  style="color: red;"
>
  <div
    class="at-indexes__menu"
  >
    <div
      class="at-indexes__menu-item"
    >
      Top
    </div>
  </div>
  <div
    class="at-indexes__body"
    id="indexes-list-AOTU2018"
  >
    <div
      class="at-indexes__content"
      id="at-indexes__top"
    />
  </div>
</div>
`;

exports[`AtIndexes Snap render AtIndexes -- props list 1`] = `
<div
  class="at-indexes"
>
  <div
    class="at-indexes__menu"
  >
    <div
      class="at-indexes__menu-item"
    >
      Top
    </div>
    <div
      class="at-indexes__menu-item"
    >
      A
    </div>
    <div
      class="at-indexes__menu-item"
    >
      B
    </div>
  </div>
  <div
    class="at-indexes__body"
    id="indexes-list-AOTU2018"
  >
    <div
      class="at-indexes__content"
      id="at-indexes__top"
    />
    <div
      class="at-indexes__list"
      id="at-indexes__list-A"
    >
      <div
        class="at-indexes__list-title"
      >
        A
      </div>
      <div
        class="at-list"
      >
        <div
          class="at-list__item"
        >
          <div
            class="at-list__item-container"
          >
            <div
              class="at-list__item-content item-content"
            >
              <div
                class="item-content__info"
              >
                <div
                  class="item-content__info-title"
                >
                  阿坝
                </div>
              </div>
            </div>
            <div
              class="at-list__item-extra item-extra"
            />
          </div>
        </div>
        <div
          class="at-list__item"
        >
          <div
            class="at-list__item-container"
          >
            <div
              class="at-list__item-content item-content"
            >
              <div
                class="item-content__info"
              >
                <div
                  class="item-content__info-title"
                >
                  阿里
                </div>
              </div>
            </div>
            <div
              class="at-list__item-extra item-extra"
            />
          </div>
        </div>
        <div
          class="at-list__item"
        >
          <div
            class="at-list__item-container"
          >
            <div
              class="at-list__item-content item-content"
            >
              <div
                class="item-content__info"
              >
                <div
                  class="item-content__info-title"
                >
                  阿拉善左旗
                </div>
              </div>
            </div>
            <div
              class="at-list__item-extra item-extra"
            />
          </div>
        </div>
        <div
          class="at-list__item"
        >
          <div
            class="at-list__item-container"
          >
            <div
              class="at-list__item-content item-content"
            >
              <div
                class="item-content__info"
              >
                <div
                  class="item-content__info-title"
                >
                  阿拉善右旗
                </div>
              </div>
            </div>
            <div
              class="at-list__item-extra item-extra"
            />
          </div>
        </div>
        <div
          class="at-list__item"
        >
          <div
            class="at-list__item-container"
          >
            <div
              class="at-list__item-content item-content"
            >
              <div
                class="item-content__info"
              >
                <div
                  class="item-content__info-title"
                >
                  阿拉善盟
                </div>
              </div>
            </div>
            <div
              class="at-list__item-extra item-extra"
            />
          </div>
        </div>
        <div
          class="at-list__item"
        >
          <div
            class="at-list__item-container"
          >
            <div
              class="at-list__item-content item-content"
            >
              <div
                class="item-content__info"
              >
                <div
                  class="item-content__info-title"
                >
                  阿拉善高新区
                </div>
              </div>
            </div>
            <div
              class="at-list__item-extra item-extra"
            />
          </div>
        </div>
        <div
          class="at-list__item"
        >
          <div
            class="at-list__item-container"
          >
            <div
              class="at-list__item-content item-content"
            >
              <div
                class="item-content__info"
              >
                <div
                  class="item-content__info-title"
                >
                  阿拉善经济开发区
                </div>
              </div>
            </div>
            <div
              class="at-list__item-extra item-extra"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="at-indexes__list"
      id="at-indexes__list-B"
    >
      <div
        class="at-indexes__list-title"
      >
        B
      </div>
      <div
        class="at-list"
      >
        <div
          class="at-list__item"
        >
          <div
            class="at-list__item-container"
          >
            <div
              class="at-list__item-content item-content"
            >
              <div
                class="item-content__info"
              >
                <div
                  class="item-content__info-title"
                >
                  百度
                </div>
              </div>
            </div>
            <div
              class="at-list__item-extra item-extra"
            />
          </div>
        </div>
        <div
          class="at-list__item"
        >
          <div
            class="at-list__item-container"
          >
            <div
              class="at-list__item-content item-content"
            >
              <div
                class="item-content__info"
              >
                <div
                  class="item-content__info-title"
                >
                  白色
                </div>
              </div>
            </div>
            <div
              class="at-list__item-extra item-extra"
            />
          </div>
        </div>
        <div
          class="at-list__item"
        >
          <div
            class="at-list__item-container"
          >
            <div
              class="at-list__item-content item-content"
            >
              <div
                class="item-content__info"
              >
                <div
                  class="item-content__info-title"
                >
                  百强
                </div>
              </div>
            </div>
            <div
              class="at-list__item-extra item-extra"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AtIndexes Snap render AtIndexes -- props topKey 1`] = `
<div
  class="at-indexes"
>
  <div
    class="at-indexes__menu"
  >
    <div
      class="at-indexes__menu-item"
    >
      test
    </div>
  </div>
  <div
    class="at-indexes__body"
    id="indexes-list-AOTU2018"
  >
    <div
      class="at-indexes__content"
      id="at-indexes__top"
    />
  </div>
</div>
`;

exports[`AtIndexes Snap render initial AtIndexes 1`] = `
<div
  class="at-indexes"
>
  <div
    class="at-indexes__menu"
  >
    <div
      class="at-indexes__menu-item"
    >
      Top
    </div>
  </div>
  <div
    class="at-indexes__body"
    id="indexes-list-AOTU2018"
  >
    <div
      class="at-indexes__content"
      id="at-indexes__top"
    />
  </div>
</div>
`;
